# ocellusscript

./: .gitignore  README.md  deploy.sh  doc.md  example.ocls  mkdocs.yml  pyproject.toml  spec.md
.github/workflows/: gradle.yml  tests.yml
compiler/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
compiler/src/: TokenKeyword.kt  TokenState.kt  TokenType.kt  Tokenizer.kt
docs/: 404.html  404.md  CNAME  _config.yml  index.html  index.md  sitemap.xml
docs/_docs/: index.md  variables.md
docs/_includes/: head.html
docs/_layouts/: documentation.html
docs/_site/: 404.html  feed.xml  index.html  sitemap.xml
docs/efficacy/: index.html
docs/language/: index.html
docs/progress/: index.html
docs/search/: search_index.json
docs/styles/: jb.css  overrides.css
docs/vscode/: index.html
efficacy/: __init__.py  ast.py  cli.py  lexer.py  parser.py
efficacy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: Sample.ocls  Square.ocls  VillainDatabase.ocls
language.tmbundle/: info.plist
language.tmbundle/Syntaxes/: OcellusScript.tmLanguage
mkdocs/: index.md  progress.md  vscode.md
mkdocs/efficacy/: 01-cli.md  index.md
mkdocs/language/: 01-expressions.md  02-functions.md  03-conditionals.md  04-lists.md  05-types.md  06-recursion.md  07-hoc.md  08-error.md  09-modules.md  10-style.md  11-spec.md  12-hive.md  index.md
modules/: Hive.ocls
tests/: main.ocls  test_basic.py  test_cli.py  test_lexer.py  test_parser.py  utils.py
tests/data/: bad.ocls  (+4 more)
vslang/: CHANGELOG.md  README.md  language-configuration.json  package.json
(+59 files in other folders)
